[tool.poetry]
name = "prometheus-sanic"
version = "2.2.0"
description = "Exposes Prometheus monitoring metrics of Sanic apps."
authors = ["Dan Kruchinin <dan.kruchinin@gmail.com>", "skar404 <skar404@gmail.com>"]
license = "MIT"

readme = "README.rst"

repository = "https://github.com/skar404/prometheus-sanic"
keywords = ["python", "prometheus", "sanic", "monitoring", "python-library"]

classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Topic :: System :: Monitoring",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.dephell.main]
from = { format = "poetry", path = "pyproject.toml" }
to = { format = "setuppy", path = "setup.py" }

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
sanic = ">=21.6.2"
prometheus-client = "^0.11.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.3.0"
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
